--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A ready-to-use backend server for Live Notifications in Rage MP",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/Petre-Gabriel/ragemp-live-notifications/issues"
   },
-  "homepage": "https://github.com/Petre-Gabriel/ragemp-live-notifications#readme"
+  "homepage": "https://github.com/Petre-Gabriel/ragemp-live-notifications#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "socket.io": "^3.1.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
+  }
 }
