--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/Petre-Gabriel/ragemp-live-notifications#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "helmet": "^4.4.1",
     "socket.io": "^3.1.1"
   },
   "devDependencies": {
