Changed the routes name and added more config options

--- a/config.json
+++ b/config.json
@@ -1,4 +1,6 @@
 {
     "port": 3000,
-    "exposeSocketIOFile": false
+    "exposeSocketIOFile": false,
+    "allowedOrigin": "*",
+    "WSPath": "/socket" 
 }
